# junk

./: AGENTS.md  HOMELAB_APP_STRATEGY.md  README.md
ansible-chadwick/: README.md
app-base-lemp/: .gitignore  Berksfile  Gemfile  README.md  Vagrantfile  metadata.rb
app-base-lnmn/: Berksfile  README.md  Vagrantfile  metadata.rb
app-scaffold/: README.md  index.js  package.json
artifact-cache/: .dockerignore  .gitignore  Dockerfile  README.md  artifact-cache-design-doc.md  go.mod  go.sum
chef-app-server/: Vagrantfile
chef-file-server/: README.md  Vagrantfile
chef-sec-base/: .kitchen.yml  Berksfile  README.md  Vagrantfile  metadata.rb
confidence-service/: README.md  package.json
craps-league/: README.md  config.toml
digital-legacy-slides/: OUTLINE.md  index.html  package.json  site.html
face-analysis/: .dockerignore  Dockerfile  README.md  analyze_face.py  api.py  process-daily-faces.sh  requirements.txt  visualize_landmarks.sh
fast-note/: AGENTS.md  Dockerfile  README.md  index.php
flash-cards/: README.md
gaej-kart/: .classpath  .gitignore  .project  README
gaej-scrapers/: README
gister/: .gitignore  README.md  create_authorization.coffee  create_gist.coffee  edit_gist.coffee  get_auths.coffee  get_gist.coffee  package.json
http-rocket/: Dockerfile  README.md  index.html  notes.md  package.json  tsconfig.json
hugo-version-inspector/: check.sh
jigseer/: Caddyfile  (+4 more)
wii-nand-journal/: .gitignore  README.md  go.mod  main.go  nand.go  pyproject.toml  titledb.go  vff.go
wii-nand-journal/wii_nand_journal/: cli.py  nand.py  titledb.py  vff.py
(+393 files in other folders)
