[project]
name = "wii-nand-journal"
version = "0.1.0"
description = "Extract the Wii Message Board play-history journal from a raw NAND dump"
requires-python = ">=3.9"
dependencies = [
    "cryptography",
]

[project.scripts]
wii-journal = "wii_nand_journal.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["wii_nand_journal"]
